--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "promise-abortable",
   "author": "dondevi",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "license": "MIT",
   "description": "A Promise lib for abortable.",
   "keywords": [
@@ -26,14 +26,16 @@
     "build": "rollup -c",
     "test": "mocha"
   },
+  "dependencies": {
+    "@babel/polyfill": "^7.4.4"
+  },
   "devDependencies": {
     "@babel/core": "^7.4.5",
-    "@babel/polyfill": "^7.4.4",
     "@babel/preset-env": "^7.4.5",
     "eslint": "^6.0.0",
     "rollup-plugin-babel": "^4.3.3",
     "rollup-plugin-commonjs": "^10.0.0",
-    "rollup-plugin-eslint": "^6.0.0",
+    "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-uglify": "^6.0.2"
   }
 }
