--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "promise-abortable",
   "author": "dondevi",
-  "version": "1.1.1",
+  "version": "1.2.0",
   "license": "MIT",
-  "description": "A Promise lib for abortable.",
+  "description": "A Promise lib for aborting in chain.",
   "keywords": [
     "promise",
     "abortable",
@@ -32,6 +32,8 @@
     "url": "https://github.com/dondevi/promise-abortable/issues"
   },
   "main": "src/index.js",
+  "module": "dist/cjs.js",
+  "browser": "dist/iife.es5.js",
   "scripts": {
     "build": "rollup -c",
     "test": "mocha"
