--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ install:
   - npm install -g mocha
   - npm install -g istanbul
   - npm install -g codecov
+  - npm install
 script:
   - npm run build
   - npm run cover
