--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "promise-abortable",
   "author": "dondevi",
-  "version": "1.2.5",
+  "version": "1.2.6",
   "license": "MIT",
   "description": "A little lib for aborting in Promise chain.",
   "keywords": [
@@ -33,8 +33,8 @@
   "bugs": {
     "url": "https://github.com/dondevi/promise-abortable/issues"
   },
-  "main": "src/index.js",
-  "module": "dist/cjs.es6.js",
+  "main": "dist/cjs.es6.js",
+  "module": "dist/esm.es6.js",
   "browser": "dist/cjs.es5.js",
   "scripts": {
     "build": "rollup -c",
